# foiatool

./: .gitignore  README.md  pyproject.toml
foiatool/: config.py  data.py  foiatool.py
foiatool/apis/: __init__.py  common.py  nextrequest.py
